6 files modified, 2 added, 3 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<mat-card>
+
+	<ng-material2-facet-search [source]="facets" (searchUpdated)="filterUpdated($event)" [chipLabelsEnabled]="true" [confirmOnRemove]="true"
+	 [clearButtonEnabled]="true" placeholder="Add a filter..." clearButtonText="CLEAR FILTERS">
+	</ng-material2-facet-search>
+
+</mat-card>
