--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,38 @@
-<mat-card>
+<div fxLayout="column" fxLayoutGap="20px">
 
-	<ng-material2-facet-search [source]="facets" (searchUpdated)="filterUpdated($event)" [chipLabelsEnabled]="true" [confirmOnRemove]="true"
-	 [clearButtonEnabled]="true" placeholder="Add a filter..." clearButtonText="CLEAR FILTERS">
-	</ng-material2-facet-search>
+	<mat-card>
 
-</mat-card>
+		<mat-card-content>
+
+			<ng-material2-facet-search [source]="facets" (searchUpdated)="filterUpdated($event)" [chipLabelsEnabled]="chipLabelsEnabled"
+			 [confirmOnRemove]="confirmOnRemove" [clearButtonEnabled]="clearButtonEnabled" placeholder="Add a filter..." clearButtonText="CLEAR FILTERS">
+			</ng-material2-facet-search>
+
+		</mat-card-content>
+
+	</mat-card>
+
+	<mat-divider></mat-divider>
+
+	<div fxLayout="row" fxLayoutAlign="space-between start" fxLayoutGap="15px">
+
+		<mat-card fxFlex="none">
+
+			<mat-card-title>Settings</mat-card-title>
+			<mat-card-content fxLayout="column">
+				<mat-checkbox [(ngModel)]="chipLabelsEnabled">Chip labels</mat-checkbox>
+				<mat-checkbox [(ngModel)]="clearButtonEnabled">"Clear" Button</mat-checkbox>
+				<mat-checkbox [(ngModel)]="confirmOnRemove">Confirmation on remove</mat-checkbox>
+			</mat-card-content>
+
+		</mat-card>
+
+		<mat-card fxFlex>
+			<mat-card-title>Output</mat-card-title>
+			<mat-card-content>
+				<pre style="font-family:monospace; font-size:small">{{selectedFacets | json }}</pre>
+			</mat-card-content>
+		</mat-card>
+
+	</div>
+</div>
